--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -363,61 +363,8 @@ footer {
     background-color: #334155;
 }
 
-/* ===== PROJECTS PAGE ===== */
 
-.projects {
-    padding: 100px 20px;
-    min-height: 100vh;
-    background-color: #0f172a;
-    display: flex;
-    justify-content: center;
-}
 
-.projects-container {
-    max-width: 900px;
-    text-align: center;
-    color: #ffffff;
-}
-
-.projects h2 {
-    font-size: 36px;
-    margin-bottom: 40px;
-    color: #38bdf8;
-}
-
-.project-card {
-    background-color: #1e293b;
-    padding: 25px;
-    margin-bottom: 25px;
-    border-radius: 10px;
-    transition: 0.3s ease;
-}
-
-.project-card:hover {
-    transform: translateY(-8px);
-    background-color: #334155;
-}
-
-.project-card h3 {
-    margin-bottom: 15px;
-    color: #38bdf8;
-}
-
-.project-card p {
-    color: #cbd5e1;
-    line-height: 1.7;
-}
-
-/* ===== CONTACT PAGE STYLE ===== */
-
-.contact {
-    padding: 100px 20px;
-    min-height: 100vh;
-    background-color: #0f172a;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
 
 .contact-container {
     width: 100%;
@@ -526,4 +473,9 @@ section {
     padding: 20px;
     width: 300px;
     border-radius: 8px;
+}
+
+nav {
+    position: relative;
+    z-index: 1000;
 }
